riscv-rt/tests/ui/exception/fail_signatures.stderr
error: `#[exception]` function must have signature `[unsafe] fn([&[mut] riscv_rt::TrapFrame]) [-> !]`
 --> tests/ui/exception/fail_signatures.rs:2:1
  |
2 | fn my_exception(code: usize) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[exception]` function must have signature `[unsafe] fn([&[mut] riscv_rt::TrapFrame]) [-> !]`
 --> tests/ui/exception/fail_signatures.rs:5:1
  |
5 | fn my_other_exception(trap_frame: &riscv_rt::TrapFrame, code: usize) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[exception]` function must have signature `[unsafe] fn([&[mut] riscv_rt::TrapFrame]) [-> !]`
 --> tests/ui/exception/fail_signatures.rs:8:1
  |
8 | async fn my_async_exception(trap_frame: &riscv_rt::TrapFrame, code: usize) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
